--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.5",
     "asciinema-player": "^3.0.1",
+    "axios": "^1.2.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.0.0"
   },
